ch: implement feedback
